# a37

./: -  .alienrecon_session.json  .alienrecon_session.json.backup  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEDICATED_FUNCTIONS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  SSL_ERROR_PROBING_GUIDE.md  TOOL_CANCELLATION_FIX.md  a37-roadmap.md  commit_message.txt  emergency_fix_session.py  gg.txt  main.py  pyproject.toml  test.py  test.txt
.alienrecon/cache/ffuf_dir/: 6e8df3188efd682d.json  895d185a13e89fae.json  e2f2231f3b2caa8f.json
.alienrecon/cache/ffuf_vhost/: 280477be08188e5e.json  3e48867fb05300c9.json
.alienrecon/cache/inspect_ssl_certificate/: 6c70e7a4a885f5f1.json
.alienrecon/cache/nmap/: 61e1a397e13130cf.json  6f3b6f24abb4bd63.json  710c0c80a86f4075.json  9daacb1ad65342e8.json  f1451dcede75ddd2.json
.cursor-context/: AI_INTEGRATION_GUIDE.md  ARCHITECTURE_AND_MODULES.md  DEVELOPMENT_WORKFLOW_AND_CONVENTIONS.md  PROJECT_OVERVIEW_AND_GOALS.md
.github/workflows/: ci.yml
a37_missions/test_box/: .alienrecon_session.json  notes.md
alienrecon/: agent.py  config.py
alienrecon/tools/: base.py  gobuster.py  nmap.py
src/: cli.py
src/alienrecon/: agent.py  cli.py  config.py  main.py
src/alienrecon/core/: agent.py  cache.py  config.py  exceptions.py  exploit_analyzer.py  input_validator.py  interaction_handler.py  parallel_executor.py  plan_executor.py  refactored_session_controller.py  session.py  session_manager.py  tool_orchestrator.py  types.py
src/alienrecon/data/: README.md  __init__.py
src/alienrecon/data/ctf_info/: htb_lame.yaml  test_box.yaml  thm_basic_pentesting.yaml
src/alienrecon/tools/: base.py  ffuf.py  gobuster.py  http_fetcher.py  http_ssl_probe.py  hydra.py  llm_functions.py  nikto.py  nmap.py  searchsploit.py  smb.py  ssl_inspector.py
src/alienrecon/wordlists/: dns-fast.txt
tests/fixtures/: enum4linuxng_sample.json  gobuster_sample.txt  http_fetcher_sample.html  hydra_sample.txt  nmap_sample.xml
tests/integration/: __init__.py  test_security_validation.py  test_session_workflow.py  test_tool_orchestrator.py
tests/tools/: test_gobuster.py  test_http_fetcher.py  test_hydra.py  test_nikto.py  test_nmap.py  test_smb.py  test_ssl_inspector.py
