[project]
name = "alienrecon"
version = "0.1.0"
description = "Alien Recon: An AI-guided CTF/Red-Team Assistant"
authors = [
    {name = "a1i3n37x"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.78.1,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "typer (>=0.15.3,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
mypy = "^1.15.0"
pytest = "^8.3.5"

